--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,8 +2,20 @@ apiVersion: v1
 entries:
   crds:
   - apiVersion: v2
+    appVersion: 2.2.2-rc.1
+    created: "2024-11-04T00:50:05.488356878Z"
+    description: 'Deploys the custom resource definitions used by the minio-operator-ext
+      operator '
+    digest: 1ed9db85e5c4cc6f565936503b0b3ff9e13ce1d60c1461d56dfa313f4641128e
+    home: https://github.com/benfiola/minio-operator-ext
+    name: crds
+    type: application
+    urls:
+    - https://benfiola.github.io/minio-operator-ext/charts/crds-2.2.2-rc.1.tgz
+    version: 2.2.2-rc.1
+  - apiVersion: v2
     appVersion: 2.2.2-alpha.3+generate-more-code
-    created: "2024-11-04T00:15:26.511901632Z"
+    created: "2024-11-04T00:50:05.488050114Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: b6165b32af4b75bfb37a01888a6e3bd6de9bff494ea6827a71c125609984fa30
@@ -15,7 +27,7 @@ entries:
     version: 2.2.2-alpha.3+generate-more-code
   - apiVersion: v2
     appVersion: 2.2.2-alpha.2+generate-more-code
-    created: "2024-11-04T00:15:26.511535452Z"
+    created: "2024-11-04T00:50:05.487521504Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: b02d8079f1bf2795be4d739c106062e4c4e5334dd67aefab9a792c0e35078b50
@@ -27,7 +39,7 @@ entries:
     version: 2.2.2-alpha.2+generate-more-code
   - apiVersion: v2
     appVersion: 2.2.1-rc.4
-    created: "2024-11-04T00:15:26.511212874Z"
+    created: "2024-11-04T00:50:05.487354882Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: a111cf0729b7be5ce65b7204bcb621a0f94738187ec1d14d64d29ed0bc07186a
@@ -39,7 +51,7 @@ entries:
     version: 2.2.1-rc.4
   - apiVersion: v2
     appVersion: 2.2.1-rc.3
-    created: "2024-11-04T00:15:26.510698208Z"
+    created: "2024-11-04T00:50:05.487195764Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 8590ed7efbfe1cb45c7439a0e789eaef7167bf7b745e10c43f455fe61e6d3228
@@ -51,7 +63,7 @@ entries:
     version: 2.2.1-rc.3
   - apiVersion: v2
     appVersion: 2.2.1-rc.2
-    created: "2024-11-04T00:15:26.510543231Z"
+    created: "2024-11-04T00:50:05.487036096Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 7d3f034f881c7775c575aa2b72224c581bf75ae50a5d72971b28ae82c8a4d280
@@ -63,7 +75,7 @@ entries:
     version: 2.2.1-rc.2
   - apiVersion: v2
     appVersion: 2.2.0
-    created: "2024-11-04T00:15:26.51038687Z"
+    created: "2024-11-04T00:50:05.486881416Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 43bcfa2057db5d063dd6c1a22ce5e6d397dc31c03c8402a51cb436a4ad753b15
@@ -75,7 +87,7 @@ entries:
     version: 2.2.0
   - apiVersion: v2
     appVersion: 2.2.0-rc.8
-    created: "2024-11-04T00:15:26.510226944Z"
+    created: "2024-11-04T00:50:05.48671816Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 134f21968e037a46f4d055da120b6ce2a661acfcaa62e4aa92d0c0f919d0a40c
@@ -87,7 +99,7 @@ entries:
     version: 2.2.0-rc.8
   - apiVersion: v2
     appVersion: 2.2.0-rc.7
-    created: "2024-11-04T00:15:26.510058832Z"
+    created: "2024-11-04T00:50:05.486559193Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: eb1457d65dff36fe610bbbc8ccf00ba8c8ad4b49eff49edc8e3e4c71c8d50ecf
@@ -99,7 +111,7 @@ entries:
     version: 2.2.0-rc.7
   - apiVersion: v2
     appVersion: 2.2.0-rc.6
-    created: "2024-11-04T00:15:26.50988582Z"
+    created: "2024-11-04T00:50:05.486391078Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: b6bb75faca94e92144f80ebb456fcb050ad07e13eb6c4e0477b4e079d6612265
@@ -111,7 +123,7 @@ entries:
     version: 2.2.0-rc.6
   - apiVersion: v2
     appVersion: 2.2.0-rc.1
-    created: "2024-11-04T00:15:26.509687923Z"
+    created: "2024-11-04T00:50:05.486222793Z"
     description: Deploy custom resource definitions for Minio Operator Ext
     digest: ca47f612708ef5e91b34f0f9c93a00f7b3e5d3ea91c83421f5f091d39111d563
     name: crds
@@ -121,7 +133,7 @@ entries:
     version: 2.2.0-rc.1
   - apiVersion: v2
     appVersion: 2.2.0-alpha.13+post-helm
-    created: "2024-11-04T00:15:26.509335609Z"
+    created: "2024-11-04T00:50:05.485867087Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 94d910d99b896a10adadbb5cd6d8d122d0f1ac30fbda184ab521bb6476e2cbc6
@@ -133,7 +145,7 @@ entries:
     version: 2.2.0-alpha.13+post-helm
   - apiVersion: v2
     appVersion: 2.1.1-rc.4
-    created: "2024-11-04T00:15:26.509135247Z"
+    created: "2024-11-04T00:50:05.485689063Z"
     description: A Helm chart for Kubernetes
     digest: ef8ff619e988b1930bcd66fe34815ab7b81ab3e514ee4f30210062a451283f1c
     name: crds
@@ -143,7 +155,7 @@ entries:
     version: 2.1.1-rc.4
   - apiVersion: v2
     appVersion: 2.1.1-rc.3
-    created: "2024-11-04T00:15:26.508762465Z"
+    created: "2024-11-04T00:50:05.485311396Z"
     description: A Helm chart for Kubernetes
     digest: aec9e4645f691e2d14ea0a34d2b658a3953c9ccb0bbfdbf692415fb6c9b9fb85
     name: crds
@@ -153,7 +165,7 @@ entries:
     version: 2.1.1-rc.3
   - apiVersion: v2
     appVersion: 2.1.1-rc.2
-    created: "2024-11-04T00:15:26.508386498Z"
+    created: "2024-11-04T00:50:05.48466131Z"
     description: A Helm chart for Kubernetes
     digest: 9c395cc95ea23ab509026db7b1481b5df276628af59ac3ddf033552e3414cd58
     name: crds
@@ -163,8 +175,20 @@ entries:
     version: 2.1.1-rc.2
   operator:
   - apiVersion: v2
+    appVersion: 2.2.2-rc.1
+    created: "2024-11-04T00:50:05.493842004Z"
+    description: 'Deploy minio-operator-ext, an operator that allows for declarative
+      management of MinIO resources '
+    digest: 208e122eb2c9220d685d400453b1dff8bf78be1610ece097db9ae52d41b70049
+    home: https://github.com/benfiola/minio-operator-ext
+    name: operator
+    type: application
+    urls:
+    - https://benfiola.github.io/minio-operator-ext/charts/operator-2.2.2-rc.1.tgz
+    version: 2.2.2-rc.1
+  - apiVersion: v2
     appVersion: 2.2.2-alpha.3+generate-more-code
-    created: "2024-11-04T00:15:26.516594882Z"
+    created: "2024-11-04T00:50:05.493522275Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 764c2a3f2563dc3ba4df6f13a9e214d7bb5948f9e6844813e0b80ceacefdaeab
@@ -176,7 +200,7 @@ entries:
     version: 2.2.2-alpha.3+generate-more-code
   - apiVersion: v2
     appVersion: 2.2.2-alpha.2+generate-more-code
-    created: "2024-11-04T00:15:26.51615181Z"
+    created: "2024-11-04T00:50:05.493213016Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 2af861886d4485f51bfe3d54865111d3f17207d2cac77c1a5b42faef02ca31a9
@@ -188,7 +212,7 @@ entries:
     version: 2.2.2-alpha.2+generate-more-code
   - apiVersion: v2
     appVersion: 2.2.1-rc.4
-    created: "2024-11-04T00:15:26.515831345Z"
+    created: "2024-11-04T00:50:05.492904208Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: b6fa847ea5b1d4326775b85115008dc45ddc9603b68513f23a1049cdedfc4aea
@@ -200,7 +224,7 @@ entries:
     version: 2.2.1-rc.4
   - apiVersion: v2
     appVersion: 2.2.1-rc.3
-    created: "2024-11-04T00:15:26.51552123Z"
+    created: "2024-11-04T00:50:05.492591873Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: caaba395bc7f3bd1771c277cb60060349c60aeb15e72b5b488c8972f8a6cfab8
@@ -212,7 +236,7 @@ entries:
     version: 2.2.1-rc.3
   - apiVersion: v2
     appVersion: 2.2.1-rc.2
-    created: "2024-11-04T00:15:26.515220041Z"
+    created: "2024-11-04T00:50:05.492284718Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: fcb65f8836281f5319ddacd3abec483aa5504dc0df1afb93dd942484689b0e4c
@@ -224,7 +248,7 @@ entries:
     version: 2.2.1-rc.2
   - apiVersion: v2
     appVersion: 2.2.0
-    created: "2024-11-04T00:15:26.514920154Z"
+    created: "2024-11-04T00:50:05.491935074Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: cffec12313cd99eea4b7f3817c877ee512a553ff3542ef397d1d9c14de702286
@@ -236,7 +260,7 @@ entries:
     version: 2.2.0
   - apiVersion: v2
     appVersion: 2.2.0-rc.8
-    created: "2024-11-04T00:15:26.514609127Z"
+    created: "2024-11-04T00:50:05.491627778Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 1b40c34bfee174d6c8c77412b68d298eecb5bd0d1d2721a3f4a565e200882af7
@@ -248,7 +272,7 @@ entries:
     version: 2.2.0-rc.8
   - apiVersion: v2
     appVersion: 2.2.0-rc.7
-    created: "2024-11-04T00:15:26.51430344Z"
+    created: "2024-11-04T00:50:05.491287822Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: cd21998524e47a63d95a5a1b52e863d91d6b4853d44fee3c3aec57e7d123d910
@@ -260,7 +284,7 @@ entries:
     version: 2.2.0-rc.7
   - apiVersion: v2
     appVersion: 2.2.0-rc.6
-    created: "2024-11-04T00:15:26.514003032Z"
+    created: "2024-11-04T00:50:05.490803786Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 59a0562d8d6929f3ee0c8ee00fd6c7bed537f98746f5ed172d657756f0453c98
@@ -272,7 +296,7 @@ entries:
     version: 2.2.0-rc.6
   - apiVersion: v2
     appVersion: 2.2.0-rc.1
-    created: "2024-11-04T00:15:26.513697866Z"
+    created: "2024-11-04T00:50:05.490462888Z"
     description: Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources
     digest: 759a21ff80891af26ee527b27f31d783ddaa333ba5f8fb4f0a816cf66285697f
@@ -283,7 +307,7 @@ entries:
     version: 2.2.0-rc.1
   - apiVersion: v2
     appVersion: 2.2.0-alpha.13+post-helm
-    created: "2024-11-04T00:15:26.513367162Z"
+    created: "2024-11-04T00:50:05.490114746Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 94a8ed5fd216a22e2e8639024b0fa75df2ea67cf71cd1d36ceab4476a463456c
@@ -295,7 +319,7 @@ entries:
     version: 2.2.0-alpha.13+post-helm
   - apiVersion: v2
     appVersion: 2.1.1-rc.4
-    created: "2024-11-04T00:15:26.513011292Z"
+    created: "2024-11-04T00:50:05.489741367Z"
     description: A Helm chart for Kubernetes
     digest: 1fbf487c84740145b9af2f8e4bce3604f5d5d65003c47d39d1804f4875fc3dd0
     name: operator
@@ -305,7 +329,7 @@ entries:
     version: 2.1.1-rc.4
   - apiVersion: v2
     appVersion: 2.1.1-rc.3
-    created: "2024-11-04T00:15:26.512652115Z"
+    created: "2024-11-04T00:50:05.489371534Z"
     description: A Helm chart for Kubernetes
     digest: cd1ff8aeaaa3e9ed0cd260efc1275870bdaec0da8e5b937c304f424883ea73c0
     name: operator
@@ -315,7 +339,7 @@ entries:
     version: 2.1.1-rc.3
   - apiVersion: v2
     appVersion: 2.1.1-rc.2
-    created: "2024-11-04T00:15:26.512283741Z"
+    created: "2024-11-04T00:50:05.488993537Z"
     description: A Helm chart for Kubernetes
     digest: 760c023a1b6ef81b0de46c4b94e900df58b25e1abf6846387505c6e680f1c158
     name: operator
@@ -323,4 +347,4 @@ entries:
     urls:
     - https://benfiola.github.io/minio-operator-ext/charts/operator-2.1.1-rc.2.tgz
     version: 2.1.1-rc.2
-generated: "2024-11-04T00:15:26.507868356Z"
+generated: "2024-11-04T00:50:05.484118403Z"
